--- a/Project Discontinued/index.html
+++ b/Project Discontinued/index.html
@@ -13,9 +13,10 @@
     <div class="rectangle"></div>
     <div class="modal">
       <div class="content">
-        <h1>Discontinued.</h1>
-        <p>This Project has been discontinued.</p>
+        <h1>Discontinued</h1>
+        <p>This Project has been Discontinued.</p>
       </div>
+      <div class="since">19 February 2022</div>
     </div>
     <div class="copy">
       <p>
